# cdp-mcp-server

./: .env.example  .gitignore  404.html  CLAUDE.md  README.md  STARTER_PROMPT.md  cm_instances.yaml.example  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
docs/: index.md  installation.md  tools.md
installation/: index.html
search/: search_index.json
src/cdp_mcp/: __init__.py  cm_client.py  cm_pool.py  config.py  server.py
src/cdp_mcp/clients/: __init__.py  hdfs_client.py  oozie_client.py  spark_client.py  yarn_client.py
src/cdp_mcp/registry/: __init__.py  base.py  env_registry.py  file_registry.py  iceberg.py
tests/integration/: docker-compose.yml  test_integration.py
tests/integration/wiremock/cm/mappings/: clusters.json
tests/integration/wiremock/hdfs/mappings/: hdfs.json
tests/integration/wiremock/yarn/mappings/: yarn.json
tests/unit/: test_env_registry.py  test_file_registry.py  test_hdfs_client.py  test_spark_client.py  test_yarn_client.py
tools/: index.html
